adding static images to the cdn to optimze the network latency
Former-commit-id: 1c6f8bf5547038ab934abf80aff72d57ecc81cea [formerly 73b3d89bddbd08c279bab4b6dccd4b4fa46a7e04] [formerly 70716da96c4813169e69e5be1fb8551a4f1fa255 [formerly cab34f886156e9328185736c9362eea7121f583b]]
Former-commit-id: a126e55585e99299511d19a5468a53c804474307 [formerly 5c61117064dfe241a7874b8aae935c4c2f20df7a]
Former-commit-id: 323a6dc2aa1555619e027337573012f2443ee332

--- a/static/welcome/css/style.css
+++ b/static/welcome/css/style.css
@@ -355,7 +355,7 @@ a:after {
 /* Header Wrap */
 
 #headerwrap {
-	background: url("../img/background.jpg") no-repeat center top;
+	background: url("http://storage.googleapis.com/iogrow-cdn/iogrow_background.jpg") no-repeat center top;
 	background-size: cover;
 	padding-top: 80px;
 }
