--- a/templates/payment.html
+++ b/templates/payment.html
@@ -1244,7 +1244,7 @@ function onSignInCallback(authResult) {
                       
                         <input type="hidden" id="user_email" value="{{userinfo.email}}">
                         <div class="col-md-9">
-                        <a id="customButton"  style="font-size:28px;" class="btn btn-primary" ng-disabled="isPaying">
+                        <a id="customButton"   style="font-size:28px;" class="btn " ng-disabled="isPaying">
                         <img width="36px" height="36px"src="/static/img/stripe-img.png" />
                         PAY WITH CARD</a>
 
@@ -1252,13 +1252,20 @@ function onSignInCallback(authResult) {
       
 
                        </div>
+                      
+                      <div class="col-md-9"  > 
+                        <a id="customButton1" href="http://www.paywithapost.de/pay?id=526b08c6-e3c8-4f7a-a5ff-151245deb1ae" ng-click="tweet()" target="new" style="font-size:28px;" class="btn " >
+                        <img width="36px" height="36px"src="/static/img/Twitter Logo.png" />
+                        PAY WITH TWEET</a>
+
+                       </div>
 
 
                        
                     </div>
-                    <div class="form-group">
-                      <iframe src="http://www.paywithatweet.com/dlbutton03.php?id=7bbc8a45-5488-4b54-b8e6-ad6d54dacf58" class="spaced-right" name="paytweet_button" scrolling="no" style="margin-left:16px" frameborder="no" height="48px" width="292px"  id="payWithTwitter" ng-disabled="isPaying" ></iframe>
-                    </div>
+                    
+
+                   
 
                     <div class="form-group" ng-show="isPaying">
                       <span> Payment operation...</span> 
@@ -1307,5 +1314,30 @@ function onSignInCallback(authResult) {
 
 </div>
 
+
+
+
+<script type="text/javascript">
+
+
+
+$('#payWithTwitter').bind('click', function(event) { 
+ alert("hello every one !");
+    console.log("hey every body ");
+});
+
+
+$(document).ready( function() {
+    var overiFrame = -1;
+    $('iframe').hover( function() {
+        overiFrame = $(this).closest('#payWithTwitter').attr('bannerid');
+        alert("i told u");
+    }, function() {
+        overiFrame = -1
+
+
+
+    });
+</script>
 
 </body></html>
