--- a/templates/admin/users/user_new.html
+++ b/templates/admin/users/user_new.html
@@ -47,7 +47,7 @@
     <div class="row" >
         <div class="col-md-9">
             <div class="row">
-                
+                <input type="hidden" id="user_email" value="{{userInfo.email}}">
                 <div class="showPage slimForm col-md-12">
                     <div class="row">
                         <div class="col-md-12">
@@ -101,8 +101,9 @@
                                 </div>
                             </div>
                             <div class="col-md-12">
-                                 <a class="btn red newBtn pull-right" href="/#/admin/users" ng-click="addNewUser(message)"  >
-                                              {{_("Invite")}}    
+                                 <a class="btn red newBtn pull-right" href="/#/admin/users" id="customButton" ng-disabled="inviteUser"   >
+                                              {{_("Invite")}}  
+                                                <!-- ng-click="addNewUser(message)" -->
                                             </a>
                             </div>
                         
