--- a/templates/payment.html
+++ b/templates/payment.html
@@ -1229,12 +1229,14 @@ function onSignInCallback(authResult) {
                 <h2>Share a tweet<span class="subscript"></span></h2>
                 <small>One month free!</small>
                 <br>
-                <a href="http://www.paywithapost.de/pay?id=526b08c6-e3c8-4f7a-a5ff-151245deb1ae" target="new" >
+                <a href="http://www.paywithapost.de/pay?id=526b08c6-e3c8-4f7a-a5ff-151245deb1ae"  >
                   <button id="customButton"  class="btn btn-primary"
-                  href="http://www.paywithapost.de/pay?id=526b08c6-e3c8-4f7a-a5ff-151245deb1ae" ng-click="tweet()"  
-                  > Pay with Tweet</button></a>
+                   ng-click="tweet()"  
+                  > Pay with Tweeet</button></a>
+
 
               </div>
+              
               </div>
               
             </div>
