--- a/templates/payment.html
+++ b/templates/payment.html
@@ -1229,7 +1229,7 @@ function onSignInCallback(authResult) {
                 <h2>Share a tweet<span class="subscript"></span></h2>
                 <small>One month free!</small>
                 <br>
-                <a href="http://www.paywithapost.de/pay?id=526b08c6-e3c8-4f7a-a5ff-151245deb1ae"  >
+                <a target="new" href="http://www.paywithapost.de/pay?id=526b08c6-e3c8-4f7a-a5ff-151245deb1ae"  >
                   <button id="customButton"  class="btn btn-primary"
                    ng-click="tweet()"  
                   > Pay with Tweeet</button></a>
