--- a/templates/billing/billing_list.html
+++ b/templates/billing/billing_list.html
@@ -18,9 +18,16 @@
     
     <h2 class="page-title">{{ _("Billing") }} </h2>
 
-   <!--  <div class=" organizationlicense"> _ _ _ _ _ _ _ _ _ imortant !
+    <div class=" organizationlicense">
+   
+     <%= organizationInfo.organizationName %> :
+        
 
-    </div> -->
+      
+
+       <%= organizationInfo.organizationNumberOfLicensed %>    <%= organizationInfo.organizationNumberOfLicense %>  {{_('licenses')}}   <%= organizationInfo.organizationNumberOfUser %>  {{_('User')}}
+
+    </div>
   </div>
 </div>
 
@@ -46,8 +53,8 @@
   </div>
   <div class="row" ng-show="isSignedIn">
     <div class="col-md-9">
-<!--  -->
-       <a class="btn red newBtn"   href="" ng-click="showPurchase()">
+
+       <a class="btn red newBtn"  id="customButton" href="" >
                       {{_('Purchase license')}}    
                     </a>
 
@@ -80,10 +87,6 @@
                       Status: <%= user.status %>
                     </span>
                     <br>
-                    <br>
-                    <span>
-                      <a href="#">#Activate</a>
-                    </span>
               
 
 
@@ -111,7 +114,14 @@
                     <span>
                       {{ _('invited by')}}<%= invitee.invited_by %> at <%= invitee.updated_at %>
                     </span>
-            
+                    <br>
+                    <span>
+                      Licenses: <%= invitee.nmbrOfLicenses %>
+                    </span>
+                  <br>
+                  <span>
+                      License Status: <%= invitee.LicenseStatus %>
+                    </span>
 
 
 
@@ -137,13 +147,31 @@
 
                 </div>
                 <div class="newContactform portlet-body" id="chats">
-                 <span class="organizationlicense">
-                    <%= organization.organization_name %> 
-                 </span>
-                 </br>
-                 <span>
-                   Users : <%= organization.organization_users_len%>
-                 </span>
+                   <ul id="tasks" class="list-unstyled lead_related_events" ng-hide="newEventform">
+                      <li ng-repeat="license in organizationInfo.licenses" id="event_<%=$index%>" class="relatedEventItem" ng-mouseenter="showDeleteBtn = true" ng-mouseleave="showDeleteBtn = false">
+                        <div class="event-container">
+                          <div class="showDescription">
+                            <span class="relatedEventTitle">
+                               <a href="/#/tasks/show/<%=task.id%>" class="discussion-content">
+                                 <%= license.purchase_date | date:'dd MMM'%>
+                               </a>
+                            </span>
+                            <a class="pull-right relatedEventMoreBtn">
+                              <i class="fa fa-chevron-right" ng-hide="showDetails" ng-click="showDetails=true"></i>
+                              <i class="fa fa-chevron-down" ng-show="showDetails" ng-click="showDetails=false"></i>
+                            </a>
+                            <a class="pull-left relatedEventDeleteBtn" ng-show="showDeleteBtn" ng-click="deleteTask(task)">
+                              <i class="fa fa fa-times-circle"></i>
+                            </a>
+                            <span class="relatedEventStartsAt pull-right" ng-hide="showDetails" ng-show="task.due" title="<%= task.due| date:'yyyy-MM-dd '%>">
+                                  <%= task.due | date:'dd MMM'%>
+                            </span>
+                          </div>
+                         
+                        </div>
+                      </li>
+                  </ul>
+
                 </div>
               </div>
     </div>
@@ -182,50 +210,6 @@
               </div>
               </div>
        </div>
-
-
-
-
-       <!--  hadji hicham -purchase modal- 03/10/2014 -->
-                    <div id="PurchaseModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-              <div class="modal-dialog">
-              <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel" class="modal-title">{{_("Purchase license")}}</h3>
-              </div>
-
-              <div class="modal-body">
-                 <form id="editSetting" name="edittag" class="form-horizontal">
-
-
-                  <div class="form-group">
-                        <label  class=" col-md-3 control-label">{{_("Plan")}} </label>
-
-                        <div class="col-md-9">
-
-                          <select class="form-control" curr ng-model="user.language" id="id_plan">
-                                        <option value="<%= plan.id%>" ng-repeat="plan in plans"><%=plan.name%> - <%=plan.amount_str%>$
-                                        </option>
-                                       
-                            </select>
-                       </div>
-
-                         <label  class=" col-md-3 control-label">{{_("Number of license")}} </label>
-                        <div class="col-md-9">
-                            <input class="form-control" type="text" required id="id_license_nmbr" ng-model="licensenbr"/>
-                        </div>
-                    </div>
-              </div>
-              <div class="modal-footer">
-                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Close")}}</button>
-                <button  type="submit" id="customButton"   class="btn red addContactNow" >{{_("Purchase")}} </button>
-              </div>
-               </form>
-               </div>
-               </div>
-            </div>
-       <!--  -->
 <script type="text/javascript">
  $('#slimtest1').slimScroll({
                     height: '20px'
