--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -175,7 +175,7 @@
                     <a ng-click="waterfallTrigger();selectedTab = 6;">{{ _('Cases')}}</a>
                   </li>
                   <li class="ng-tab md-menu" ng-class="{active: selectedTab == 9}">
-                    <a ng-click="waterfallTrigger();selectedTab = 9;" ng-show="linkedProfile.headline||linkedProfile.locality||linkedProfile.industry||linkedProfile.relation||twitterProfile.description_of_user||twitterProfile.screen_name||twitterProfile.location||twitterProfile.lang" >{{_('Details of Contact')}}</a>
+                    <a ng-click="waterfallTrigger();selectedTab = 9;">{{_('Details of Contact')}}</a>
                   </li>
 
                   <li class="dropdown md-menu-inv">
@@ -1260,7 +1260,7 @@
                                 <div class="tab-pane active" id="tab_1_9" ng-if="(selectedTab == 9)">
                                     <div class="row slimform">
                                         <div class="col-md-6">
-                                            <div class="news-blocks blank-card blank-card-yellow newsCard"  ng-show="linkedProfile.headline||linkedProfile.locality||linkedProfile.industry||linkedProfile.relation">
+                                            <div class="news-blocks blank-card blank-card-yellow newsCard">
                                                 <h3>Contact Informations from Linkedin</h3>
                                                 <div class="news-block-tags">
                                                     <strong>First name</strong>
@@ -1334,12 +1334,12 @@
                                                     </li>
                                                 </ul>
                                             </div>
-                                            <div class="news-blocks blank-card blank-card-yellow newsCard" ng-show="linkedProfile.experiences.current_exprience" >
+                                            <div class="news-blocks blank-card blank-card-yellow newsCard">
                                                 <h3>Experiences</h3>
                                                 <div class="news-block-tags" ng-show="linkedProfile.experiences.current_exprience">
                                                     <strong>current experiences</strong>
                                                 </div>
-                                              
+                                               
                                                 <ul class="list-unstyled contact-infos">
                                                     <li ng-repeat="exp in linkedProfile.experiences.current_exprience">
                                                       - <%=exp.title%>  ,  <%=exp.organisation%> 
@@ -1354,7 +1354,7 @@
                                                     </li>
                                                 </ul>
                                             </div>
-                                            <div class="news-blocks blank-card blank-card-yellow newsCard" ng-show="twitterProfile.description_of_user||twitterProfile.screen_name||twitterProfile.location||twitterProfile.lang" >
+                                            <div class="news-blocks blank-card blank-card-yellow newsCard">
                                                 <h3>General Informations from Twitter</h3>
                                                 <img class="google-avatar pull-right" src="<%=twitterProfile.profile_image_url_https%>"/>
                                                 <div class="news-block-tags">
@@ -1394,7 +1394,7 @@
                                                     </li>
                                                 </ul>
                                             </div>
-                                            <div class="news-blocks blank-card blank-card-red newsCard" ng-show="twitterProfile.nbr_tweets||twitterProfile.followers_count" >
+                                            <div class="news-blocks blank-card blank-card-red newsCard">
                                                 <h3>Stats from Twitter</h3>
                                                 <div class="news-block-tags">
                                                     <strong>Number of Tweets</strong>
@@ -1421,7 +1421,7 @@
                                                     </li>
                                                 </ul> 
                                             </div>
-                                             <div class="news-blocks blank-card blank-card-red newsCard" ng-show="twitterProfile.last_tweet_text||twitterProfile.last_tweet_retweet_count" >
+                                             <div class="news-blocks blank-card blank-card-red newsCard">
                                                 <h3> Tweets</h3>
                                                 <div class="news-block-tags">
                                                     <strong>Last Tweet:</strong>
