Add get linkedin Info from Twitter to account fix #991
Former-commit-id: 3f761a02fc7ac5f7dc7b85dad447add73d6a04d1 [formerly 99a0521474a03cb6a2ea7e2d75220ca58a896c79] [formerly 2549fccd7d6eade7cb913022668fa9733f92dc0d [formerly ac5a822957c6dbedd486c1a272b2bb236ae92cc4]]
Former-commit-id: 387ae71fe69480dc2cd2428dd80bf413228ba43f [formerly b7f3865c127e1f8131dec83bdedfa32a6388d474]
Former-commit-id: ca205311fee71f168dbdffc219e21850129604f8

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -1655,7 +1655,148 @@
                                             </div>
                                         </div>
 
-                                     
+                                     <!--twitter account profile !-->
+                                      <div class="col-md-12">
+                                            <div class="news-blocks blank-card blank-card-yellow newsCard">
+                                                <img class="img-responsive" ng-src=" <%=twitterProfile.profile_banner_url%>">
+                                                <h3>Twitter Account Informations</h3>
+                                                <div class="news-block-tags">
+                                                    <strong>Name</strong>
+                                                </div>
+                                                <ul class="list-unstyled contact-infos">
+                                                
+                                                    <li>
+                                                        <%=twitterProfile.name%>
+                                                    </li>
+                                    
+
+                                                </ul>
+                                                <div class="news-block-tags">
+                                                    <strong>logo</strong>
+                                                </div>
+                                                <ul class="list-unstyled contact-infos">
+                                                
+                                                    <li>
+                                                       <img ng-src="<%=twitterProfile.profile_image_url_https%>"> 
+                                                    </li>
+
+                                                </ul>
+                                                <div class="news-block-tags">
+                                                    <strong>Description</strong>
+                                                </div>
+                                                <ul class="list-unstyled contact-infos">
+                                                    <li>
+                                                        <%=twitterProfile.description_of_user%>
+                                                    </li>
+                                                </ul>
+                                                
+                                              
+                                               
+                                                <div class="news-block-tags">
+                                                    <strong>Location</strong>
+                                                </div>
+                                                <ul class="list-unstyled contact-infos">
+                                                    <li>
+                                                        <%=twitterProfile.location%>
+                                                    </li>
+                                                </ul>
+                                                 <div class="news-block-tags">
+                                                    <strong>Created at </strong>
+                                                </div>
+                                                <ul class="list-unstyled contact-infos">
+                                                    <li>
+                                                        <%=twitterProfile.created_at%>
+                                                    </li>
+                                                </ul>
+                                                <div class="news-block-tags">
+                                                    <strong>language </strong>
+                                                </div>
+                                                <ul class="list-unstyled contact-infos">
+                                                    <li>
+                                                        <%=twitterProfile.lang%>
+                                                    </li>
+                                                </ul>
+                                                  <div class="news-block-tags">
+                                                    <strong>Twitter url</strong>
+                                                </div>
+                                                  <ul class="list-unstyled contact-infos">
+                                                    <li>
+                                                        <a target="new" href="http://www.twitter.com/<%=twitterProfile.screen_name%>"><%=twitterProfile.screen_name%></a> 
+                                                    </li>
+                                                </ul>
+                                                   <div class="news-block-tags">
+                                                    <strong>Url of company</strong>
+                                                </div>
+                                                  <ul class="list-unstyled contact-infos">
+                                                    <li>
+                                                        <a target="new" href="<%=twitterProfile.url_of_user_their_company%>"><%=twitterProfile.url_of_user_their_company%></a> 
+                                                    </li>
+                                                </ul>
+                                                <div class="news-block-tags">
+                                                    <strong>Followers</strong>
+                                                </div>
+                                                  <ul class="list-unstyled contact-infos">
+                                                    <li>
+                                                        <%=twitterProfile.followers_count%>
+                                                    </li>
+                                                </ul>
+                                                <div class="news-block-tags">
+                                                    <strong>Friends</strong>
+                                                </div>
+                                                  <ul class="list-unstyled contact-infos">
+                                                    <li>
+                                                        <%=twitterProfile.friends_count%>
+                                                    </li>
+                                                </ul>
+                                                <div class="news-block-tags">
+                                                    <strong>Number of tweets</strong>
+                                                </div>
+                                                  <ul class="list-unstyled contact-infos">
+                                                    <li>
+                                                        <%=twitterProfile.nbr_tweets%>
+                                                    </li>
+                                                </ul>
+                                                <div class="news-block-tags">
+                                                    <strong>Followers</strong>
+                                                </div>
+                                                  <ul class="list-unstyled contact-infos">
+                                                    <li>
+                                                        <%=twitterProfile.followers_count%>
+                                                    </li>
+                                                </ul>
+                                               
+                                              <div class="news-block-tags">
+                                                    <strong>Last tweet text </strong>
+                                                </div>
+                                                  <ul class="list-unstyled contact-infos">
+                                                    <li>
+                                                        <%=twitterProfile.last_tweet_text%>
+                                                    </li>
+                                                </ul>
+                                                <div class="news-block-tags">
+                                                    <strong>Number of retweet </strong>
+                                                </div>
+                                                  <ul class="list-unstyled contact-infos">
+                                                    <li>
+                                                        <%=twitterProfile.last_tweet_retweet_count%>
+                                                    </li>
+                                                </ul>
+                                                <div class="news-block-tags">
+                                                    <strong>Number of favoris</strong>
+                                                </div>
+                                                  <ul class="list-unstyled contact-infos">
+                                                    <li>
+                                                        <%=twitterProfile.last_tweet_favorite_count%>
+                                                    </li>
+                                                </ul>
+
+                                                
+                                               
+
+                                            </div>
+                                        </div>
+
+
                                        
                                     </div>
                                 </div>
