some changes in welcome page
Former-commit-id: ef1ca9c5085b5f1894403f5b501a93e932f617c8 [formerly 66647c9b4083c1e27b5372b354ca739e9e7a81d0] [formerly c046af24b41f5b083357451bd0255695069abdb6 [formerly 5406c0b932bc6de6724ca26945c230a69ab574f4]]
Former-commit-id: 84edf91081e879e2840a4ddb369b4c8c0d503681 [formerly 922e739bab5544f26123b50603c9b0dcc2acf841]
Former-commit-id: 17d51e48207664eb806375714e32027be60690af

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -393,7 +393,7 @@
 
                         <span class="typcn typcn-heart-full-outline"><span>
                         <h3>Easy to use</h3>
-                        <p>You can get started in no time, We've built the freshet CRM out there by simplifying the experience for you, so you can focus on what matters. your relationships.</p>
+                        <p>You can get started in no time, We've built the freshest CRM out there by simplifying the experience for you, so you can focus on what matters. your relationships.</p>
                     </div>
                     <div class="col-lg-3">
                         <span class="typcn typcn-news"><span>
@@ -608,7 +608,7 @@
                               <div id="customBtn" class="customGPlusSignIn">
                                 <a href="/sign-in" >
                                 <span class="icon"></span>
-                                <span class="buttonText">Start using ioGrow</span></a>
+                                <span class="buttonText">Start using ioGrow (Free Trial)</span></a>
                               </div>
             </div>
         </div>
