--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,13 @@
   <link href="/static/angular-xeditable-0.1.8/css/xeditable.css" rel="stylesheet">
   <link href="/static/plugins/fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css"/>
   <link href='/static/plugins/fullcalendar/fullcalendar.print.css' rel='stylesheet' media='print' />
+
+  <!-- test -->
+  <link rel="stylesheet" type="text/css" href="http://cdn-na.infragistics.com/igniteui/2014.1/latest/css/themes/infragistics/infragistics.theme.css">
+  <link rel="stylesheet" type="text/css" href="http://cdn-na.infragistics.com/igniteui/2014.1/latest/css/structure/infragistics.css">  
+  <!-- test -->
   <link href="/static/bootstrap3/css/test.css" rel="stylesheet" type="text/css"/>
+
 
 
   <!-- END THEME STYLES -->
@@ -423,6 +429,14 @@
   <script src="/static/bootstrap3/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
   <script src="/static/bootstrap3/plugins/moment/moment.min.js"></script>
   <script src="/static/app/scripts/vendor/angular.js" ></script>
+  <script src="/static/plugins/ng-google-chart.js" ></script>
+  <script src="/static/plugins/d3.min.js" ></script>
+  <script src="/static/plugins/d3-funnel-charts.js" ></script>
+    <!-- test -->
+      <script type="text/javascript" src="http://cdn-na.infragistics.com/igniteui/2014.1/latest/js/infragistics.core.js"></script>
+      <script type="text/javascript" src="http://cdn-na.infragistics.com/igniteui/2014.1/latest/js/infragistics.dv.js"></script>
+      <script type="text/javascript" src="http://cdn-na.infragistics.com/igniteui/2014.1/latest/js/infragistics.lob.js"></script>
+      <!-- test -->
   <script type="text/javascript">
     var apisToLoad;
     var callback = function() {
@@ -488,14 +502,13 @@
   </script>
   <script src="https://apis.google.com/js/client.js?onload=loadGapi">
   </script>
+   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   
 
   <script src="http://storage.googleapis.com/iogrow-cdn/static_scripts.js" ></script>
   <script src="/static/plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script>
    <script src="/static/plugins/fullcalendar/lang-all.js" type="text/javascript"></script>
   <script src="/static/plugins/fullcalendar/gcal.js" type="text/javascript"></script>
-
-
   <!-- ioGrow Services -->
   <script src="/static/app/scripts/services/authservices.js"></script>
   <script src="/static/app/scripts/services/infonodeservices.js"></script>
@@ -538,6 +551,7 @@
   <script src="/static/app/scripts/controllers/notecontrollers.js"></script>
   <script src="/static/app/scripts/controllers/taskcontrollers.js"></script>
   <script src="/static/app/scripts/controllers/eventcontrollers.js"></script>
+  <script src="/static/app/scripts/controllers/dashboardController.js" ></script>
   
   <!--Admin controllers-->
   <script src="/static/app/scripts/controllers/usercontrollers.js" ></script>
