--- a/templates/admin/users/user_show.html
+++ b/templates/admin/users/user_show.html
@@ -110,7 +110,7 @@
             <div class="col-md-12">
               <div class="tabbable tabbable-custom">
                 <ul class="nav nav-tabs">
-                  <li class="ng-tab" ng-class="{active: selectedTab == 1}"><a ng-click="selectedTab = 1;allTasks();">{{ _("Open Tasks") }}</a></li>
+                  <li class="ng-tab" ng-class="{active: selectedTab == 1}"><a ng-click="selectedTab = 1;openTasks();">{{ _("Open Tasks") }}</a></li>
                   <li class="ng-tab" ng-class="{active: selectedTab == 2}"><a ng-click="selectedTab = 2; completedTasks();" >{{ _("Completed Tasks") }}</a></li>
                   <li class="ng-tab sm-menu hidden-lg hidden-md"><a ng-click="showTagFilterCard();">{{ _("Filter by Tags") }}</a></li>                   
                   <li class="dropdown sm-menu-inv">
