Launch Crawler after inserting new Topic fix #1086
Former-commit-id: 88ada807bfb34897a386b6ba76e49b07dd21c33b [formerly a905a8c779427227fd97f8d06ce990b87a720743] [formerly 67c5aadbacdfbb302b042ddeb63c97c9f7e33c98 [formerly 5e056827dc0704d15a402dbf7816cdd8a768fbec]]
Former-commit-id: 27e118b3482d741942b30c94d0afd5b230845800 [formerly 216f0ee14600ce5268797dcdae054ecf5fd9f9a6]
Former-commit-id: 8c78c3ec4824696ca5ae823dce34d1095e8a95be

--- a/templates/live/live_show_page.html
+++ b/templates/live/live_show_page.html
@@ -13,7 +13,7 @@
             <div class="span4">
                 <div class="pull-right get-in">
                       <button id="myBtn" class="btn green g-interactivepost"
-    data-clientid="987765099891.apps.googleusercontent.com"
+    data-clientid="935370948155-a4ib9t8oijcekj8ck6dtdcidnfof4u8q.apps.googleusercontent.com"
     data-contenturl="http://gcdc2013-iogrow.appspot.com/live/shows/{{show.id}}/"
     data-calltoactionlabel="DISCOVER"
     data-calltoactionurl="http://gcdc2013-iogrow.appspot.com/live/shows/{{show.id}}/"
