Synchronize tasks of the assignee on his google calendar ,fix #1077
Former-commit-id: ad4a59c64064d80d9e46054b3cf1aa97ad0810ec [formerly 6d68dd2a9228dd83cf16ad15610da2555dab9593] [formerly a75e9b251721c23489249f3d86a078b53412d632 [formerly ed09ffcb898e6cceeef4d531c51baed3edc09e1a]]
Former-commit-id: 826b3d2d7befc7e2e5f1f097c54b960bffbd0d3d [formerly 89f479ebedd287c8478abd9a021f7efc10455603]
Former-commit-id: 0fa01f9475223216ba5f4178ffbbc595958ff456

--- a/templates/base.html
+++ b/templates/base.html
@@ -424,9 +424,9 @@
   <script src="/static/bootstrap3/plugins/moment/moment.min.js"></script>
   <script src="/static/app/scripts/vendor/angular.js" ></script>
   <script type="text/javascript">
-   // var ROOT = '/_ah/api';
+   var ROOT = '/_ah/api';
    
-   var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+   //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
     var apisToLoad;
     var callback = function() {
 
