--- a/templates/base.html
+++ b/templates/base.html
@@ -452,7 +452,7 @@
         window.authResult = undefined;
         var apisToLoad;
 
-   // var ROOT = '/_ah/api';
+    // var ROOT = '/_ah/api';
 
     var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
@@ -524,10 +524,38 @@
     KeenIO.log('in home page');
   </script>
 
-  <script src="http://storage.googleapis.com/iogrow-cdn/static_scripts.js" ></script>
-  <script src="/static/plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script>
-   <script src="/static/plugins/fullcalendar/lang-all.js" type="text/javascript"></script>
-  <script src="/static/plugins/fullcalendar/gcal.js" type="text/javascript"></script>
+ <script src="//code.jquery.com/ui/1.11.1/jquery-ui.min.js" type="text/javascript"></script>
+ <script src="/static/bootstrap3/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+ <script src="/static/app/scripts/vendor/ui-bootstrap-0.5.0.js" ></script>
+ <script src="/static/app/scripts/vendor/ui-bootstrap-tpls-0.5.0.js"></script>
+ <script src="/static/app/scripts/vendor/wysihtml5-0.3.0.min.js" ></script>
+ <script src="/static/app/scripts/vendor/bootstrap-wysihtml5.js" ></script>
+ <script src="/static/app/scripts/vendor/select2.min.js" ></script>
+ <script src="/static/app/scripts/vendor/ui-select2.js" ></script>
+ <script src="/static/angular-xeditable-0.1.8/js/xeditable.js"></script>
+ <script src="/static/plugins/waterfall/zepto.js"></script>
+ <script src="/static/plugins/waterfall/jquery.waterfall.js"></script>
+ <script src="/static/bootstrap3/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
+ <script src="/static/bootstrap3/plugins/moment/moment.min.js"></script>
+ <script src="/static/bootstrap3/plugins/moment/angular.moment.js"></script>
+ <script src="/static/plugins/ngQuickDate/ng-quick-date.js"></script>
+ <script src="/static/app/scripts/vendor/datetimepicker.js"></script>
+ <script src="/static/bootstrap3/plugins/jquery.blockui.min.js" type="text/javascript"></script>
+ <script src="/static/bootstrap3/plugins/jquery.cokie.min.js" type="text/javascript"></script>
+ <script src="/static/bootstrap3/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
+ <script src="/static/plugins/bootstrap-switch/static/js/bootstrap-switch.js" type="text/javascript" ></script>
+ <script src="/static/plugins/jquery-textfill/jquery.textfill.min.js" type="text/javascript" ></script>
+ <script src="/static/app/scripts/vendor/jquery.ui.map.min.js"></script>
+ <script type="text/javascript" src="/static/app/scripts/vendor/jquery.ui.map.services.js">
+ </script>
+ <script src="/static/plugins/jquery-easy-pie-chart/angular.easypiechart.js" type="text/javascript"></script>
+ <script src="/static/plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script>
+ <script src="/static/plugins/fullcalendar/lang-all.js" type="text/javascript"></script>
+ <script src="/static/plugins/fullcalendar/gcal.js" type="text/javascript"></script>
+ <script src="/static/plugins/date-time-picker/jquery.simple-dtpicker.js"></script>
+ <script type="text/javascript" src="/static/app/scripts/vendor/bootstrap-datetimepicker.min.js"></script>
+  <script type="text/javascript" src="/static/plugins/caret/jquery.caret.js"></script>
+ <script src="/static/bootstrap3/plugins/bootstrap-hover-dropdown/twitter-bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
   <!-- ioGrow Services -->
   <script src="/static/app/scripts/services/authservices.js"></script>
   <script src="/static/app/scripts/services/infonodeservices.js"></script>
