--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -174,7 +174,7 @@
                   <li class="ng-tab md-menu" ng-class="{active: selectedTab == 6}">
                     <a ng-click="waterfallTrigger();selectedTab = 6;">{{ _('Cases')}}</a>
                   </li>
-                  <li class="ng-tab md-menu" ng-class="{active: selectedTab == 9}">
+                  <li class="ng-tab md-menu" ng-class="{active: selectedTab == 9, forceHide: noDetails()}">
                     <a ng-click="waterfallTrigger();selectedTab = 9;">{{_('Details of Contact')}}</a>
                   </li>
 
@@ -190,7 +190,7 @@
                       {% if is_business_user %}
                       <li class="ng-tab md-menu-inv" ng-class="{active: selectedTab == 5}"><a ng-click="waterfallTrigger(); selectedTab = 5;">{{ _('Opportunities')}}</a></li>
                       <li class="ng-tab md-menu-inv" ng-class="{active: selectedTab == 6}"><a ng-click="waterfallTrigger(); selectedTab = 6;">{{ _('Cases')}}</a></li>  
-                      <li class="ng-tab md-menu-inv" ng-class="{active: selectedTab == 9}"><a ng-click="waterfallTrigger(); selectedTab = 9;">{{_('Details of Contact')}}</a></li>
+                      <li ng-hide="noDetails()" class="ng-tab md-menu-inv" ng-class="{active: selectedTab == 9}"><a ng-click="waterfallTrigger(); selectedTab = 9;">{{_('Details of Contact')}}</a></li>
                     
                       {%endif%}
 
@@ -1258,29 +1258,122 @@
                   </div>
                     <!-- $ linkedin profile -->
                                 <div class="tab-pane active" id="tab_1_9" ng-if="(selectedTab == 9)">
-                                    <div class="row slimform">
-                                        <div class="col-md-6">
-                                            <div class="news-blocks blank-card blank-card-yellow newsCard">
-                                                <h3>Contact Informations from Linkedin</h3>
-                                                <div class="news-block-tags">
-                                                    <strong>First name</strong>
-                                                </div>
-                                                <ul class="list-unstyled contact-infos">
-                                                
-                                                    <li>
-                                                        <%=linkedProfile.firstname%>
-                                                    </li>
-                                    
+                                    <div class="waterfall9">
+                                    <div class="cardElement loaderCard" >
+                                            <h3>Experiences</h3>
+                                            <div class="news-block-tags" ng-class='{hiddenTowaterfall: linkedProfile.experiences.current_exprience}'>
+                                                <strong>current experiences</strong>
+                                            </div>
+                                           
+                                            <ul class="list-unstyled contact-infos">
+                                                <li ng-repeat="exp in linkedProfile.experiences.current_exprience">
+                                                  - <%=exp.title%>  ,  <%=exp.organisation%> 
+                                                </li>
+                                            </ul> 
+                                    </div>
+                                    <div class="cardElement loaderCard" >
+                                            <h3>Experiences</h3>
+                                            <div class="news-block-tags" ng-class='{hiddenTowaterfall: linkedProfile.experiences.current_exprience}'>
+                                                <strong>current experiences</strong>
+                                            </div>
+                                           
+                                            <ul class="list-unstyled contact-infos">
+                                                <li ng-repeat="exp in linkedProfile.experiences.current_exprience">
+                                                  - <%=exp.title%>  ,  <%=exp.organisation%> 
+                                                </li>
+                                            </ul> 
+                                    </div>
+                                    <div class="cardElement loaderCard" >
+                                            <h3>Experiences</h3>
+                                            <div class="news-block-tags" ng-class='{hiddenTowaterfall: linkedProfile.experiences.current_exprience}'>
+                                                <strong>current experiences</strong>
+                                            </div>
+                                           
+                                            <ul class="list-unstyled contact-infos">
+                                                <li ng-repeat="exp in linkedProfile.experiences.current_exprience">
+                                                  - <%=exp.title%>  ,  <%=exp.organisation%> 
+                                                </li>
+                                            </ul> 
+                                    </div>
+                                    <div class="cardElement loaderCard" >
+                                            <h3>Experiences</h3>
+                                            <div class="news-block-tags" ng-class='{hiddenTowaterfall: linkedProfile.experiences.current_exprience}'>
+                                                <strong>current experiences</strong>
+                                            </div>
+                                           
+                                            <ul class="list-unstyled contact-infos">
+                                                <li ng-repeat="exp in linkedProfile.experiences.current_exprience">
+                                                  - <%=exp.title%>  ,  <%=exp.organisation%> 
+                                                </li>
+                                            </ul> 
+                                    </div>
+                                    <!-- <div class="cardElement loaderCard" >
+                                      <div class="loaderCardContent">
+                                         <img class="img-responsive " src="/static/img/gloader.gif">
+                                         <span> {{ _('Loading...')}}</span>
+                                      </div>
+                                    </div>
+                                     <div class="cardElement loaderCard" >
+                                      <div class="loaderCardContent">
+                                         <img class="img-responsive " src="/static/img/gloader.gif">
+                                         <span> {{ _('Loading...')}}</span>
+                                      </div>
+                                    </div>
+                                     <div class="cardElement loaderCard" >
+                                      <div class="loaderCardContent">
+                                         <img class="img-responsive " src="/static/img/gloader.gif">
+                                         <span> {{ _('Loading...')}}</span>
+                                      </div>
+                                       <div class="loaderCardContent">
+                                         <img class="img-responsive " src="/static/img/gloader.gif">
+                                         <span> {{ _('Loading...')}}</span>
+                                      </div>
+                                       <div class="loaderCardContent">
+                                         <img class="img-responsive " src="/static/img/gloader.gif">
+                                         <span> {{ _('Loading...')}}</span>
+                                      </div>
+                                    </div>
+                                     <div class="cardElement loaderCard" >
+                                      <div class="loaderCardContent">
+                                         <img class="img-responsive " src="/static/img/gloader.gif">
+                                         <span> {{ _('Loading...')}}</span>
+                                      </div>
+                                       <div class="loaderCardContent">
+                                         <img class="img-responsive " src="/static/img/gloader.gif">
+                                         <span> {{ _('Loading...')}}</span>
+                                      </div>
+                                    </div>
+                                     <div class="cardElement loaderCard" >
+                                      <div class="loaderCardContent">
+                                         <img class="img-responsive " src="/static/img/gloader.gif">
+                                         <span> {{ _('Loading...')}}</span>
+                                      </div>
+                                    </div>
+                                     <div class="cardElement loaderCard" >
+                                      <div class="loaderCardContent">
+                                         <img class="img-responsive " src="/static/img/gloader.gif">
+                                         <span> {{ _('Loading...')}}</span>
+                                      </div>
+                                    </div>
+                                     <div class="cardElement loaderCard" >
+                                      <div class="loaderCardContent">
+                                         <img class="img-responsive " src="/static/img/gloader.gif">
+                                         <span> {{ _('Loading...')}}</span>
+                                      </div>
+                                       <div class="loaderCardContent">
+                                         <img class="img-responsive " src="/static/img/gloader.gif">
+                                         <span> {{ _('Loading...')}}</span>
+                                      </div>
+                                    </div>
+                                     <div class="cardElement loaderCard" >
+                                      <div class="loaderCardContent">
+                                         <img class="img-responsive " src="/static/img/gloader.gif">
+                                         <span> {{ _('Loading...')}}</span>
+                                      </div>
+                                    </div>
 
-                                                </ul>
-                                                <div class="news-block-tags">
-                                                    <strong>Last Name</strong>
-                                                </div>
-                                                <ul class="list-unstyled contact-infos">
-                                                    <li>
-                                                        <%=linkedProfile.lastname%>
-                                                    </li>
-                                                </ul>
+                                            <!--<div class="news-blocks blank-card blank-card-yellow newsCard" ng-show="linkedProfile.headline||linkedProfile.locality||linkedProfile.industry||linkedProfile.relation">
+                                                <h3>Contact Informations from Linkedin</h3>
                                                 <div class="news-block-tags">
                                                     <strong>profission</strong>
                                                 </div>
@@ -1334,7 +1427,7 @@
                                                     </li>
                                                 </ul>
                                             </div>
-                                            <div class="news-blocks blank-card blank-card-yellow newsCard">
+                                            <div class="news-blocks blank-card blank-card-yellow newsCard" ng-hide="isEmpty(linkedProfile.experiences)">
                                                 <h3>Experiences</h3>
                                                 <div class="news-block-tags" ng-show="linkedProfile.experiences.current_exprience">
                                                     <strong>current experiences</strong>
@@ -1345,6 +1438,7 @@
                                                       - <%=exp.title%>  ,  <%=exp.organisation%> 
                                                     </li>
                                                 </ul> 
+                                                </div>
                                                 <div class="news-block-tags" ng-show="linkedProfile.experiences.past_exprience">
                                                     <strong>past experiences</strong>
                                                 </div>
@@ -1357,7 +1451,7 @@
                                             <div class="news-blocks blank-card blank-card-yellow newsCard">
                                                 <h3>General Informations from Twitter</h3>
                                                 <img class="google-avatar pull-right" src="<%=twitterProfile.profile_image_url_https%>"/>
-                                                <div class="news-block-tags">
+                                                <div class="news-block-tags"ng-show="twitterProfile.description_of_user">
                                                     <strong>Description of user</strong>
                                                 </div>
                                                 <ul class="list-unstyled contact-infos">
@@ -1370,11 +1464,13 @@
                                                 </ul>
                                                
                                                 <div class="news-block-tags">
-                                                    <strong>Screen name</strong>
+                                                    <strong>Twitter Link</strong>
                                                 </div>
                                                 <ul class="list-unstyled contact-infos">
                                                     <li>
-                                                        <%=twitterProfile.screen_name%>
+                                                      <a href="https://twitter.com/<%=twitterProfile.screen_name%>">
+                                                        <i class="fa fa-twitter"></i>@<%=twitterProfile.screen_name%>
+                                                      </a>
                                                     </li>
                                                 </ul> 
                                                 <div class="news-block-tags">
@@ -1447,10 +1543,8 @@
                                                 
                                             </div>
 
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="right-col">
-                                                <div class="news-blocks blank-card blank-card-red newsCard"  ng-show="linkedProfile.resume">
+                                        
+                                               <div class="news-blocks blank-card blank-card-red newsCard"  ng-show="linkedProfile.resume">
                                                     <h3>Summary</h3>
                                                     <div class="news-block-tags">
 
@@ -1477,10 +1571,7 @@
                                                       - <%=formation%>   
                                                     </li>
                                                     </ul>
-                                                </div>
-
-                                            </div>
-                                        </div>
+                                                </div>-->
                                     </div>
                                 </div>
               </div>
@@ -2728,6 +2819,11 @@
           });
   $('.waterfall4').waterfall({
               colMinWidth: 210,
+              defaultContainerWidth: 840,
+              autoresize: true
+          });
+  $('.waterfall9').waterfall({
+              colMinWidth: 390,
               defaultContainerWidth: 840,
               autoresize: true
           });
