fix some bugs on discovery
Former-commit-id: b16b6cb593b83ae98071bef5218e938b42b519bc [formerly 2a56f6ff46194ecc5b287fa240db929102adbd24] [formerly 10a5e4341289f12491b71d593e2fdcf7069ad6e5 [formerly 9f9a3c995486802f9c10c2e8dab2bb786e5c8695]]
Former-commit-id: 59cabc6b8f07bc9b6b658a5b68292be7a900fcb9 [formerly 5e30cc84a95289b866b21b3a71f839bab6ac4a66]
Former-commit-id: a2764dde31a241edfe1f26eca7d7d6f434922ad9

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -166,7 +166,7 @@
               <div class="text">
                <!-- <button type="button" class="close deleteLeadBtn" ng-show="showClose" ng-click="editbeforedelete(lead)"></button>-->
                 <div class="name">
-                  <a href="/#/discovers/show/<%= tweet.id %>topic-*<%=tweet.topic %>" ng-click="details_of_tweets(tweet.id)" target="new" class="profile-link">
+                  <a href="/#/discovers/show/<%= tweet.id %>topic-*<%=tweet.topic %>" ng-click="details_of_tweets(tweet.id)" class="profile-link">
                     <%= tweet.author_name %>
                   </a>
                 </div>
@@ -174,11 +174,12 @@
                   <span>
                       <%=fromNow(lead.updated_at)%>
                   </span>
-                  <a href="/#/discovers/show/<%= tweet.id %>topic-<%=tweet.topic %>" ng-click="details_of_tweets(tweet.id)" target="new" >
+                  <a href="/#/discovers/show/<%= tweet.id %>topic-<%=tweet.topic %>" ng-click="details_of_tweets(tweet.id)" >
                   <span  class="contact-title" >
                     <%= tweet.content %>
                   </span>
                   </a>
+                  <span ng-click="markAsLead(tweet)"> Mark as Lead</span>
                   
                 </div>
               </div>
