Copy/past event in the calendar
Former-commit-id: 70db107876dc1c81339b5ff34b9978b00fa75781 [formerly cd55c24732f3b7ef80f981308789b47dc8597bda] [formerly 933e70d5cc0e111545747c96e54137da3635ad09 [formerly 9dc3c9031438571cdc9754deedd039cea9241826]]
Former-commit-id: 916d4c9b70084f7d405b9af4c0d67af5552d18d6 [formerly ea1da41417e32360c1e4bf1a0664be7c34907982]
Former-commit-id: 571203516787a0553bdeeda0809d2c760d56db25

--- a/templates/calendar/calendar_show.html
+++ b/templates/calendar/calendar_show.html
@@ -55,6 +55,16 @@
     </div>
   </div>
 
+
+<!-- here folks -->
+ <div id="effect" class="ui-widget-content ui-corner-all">
+    <h3 class="ui-widget-header ui-corner-all">Show</h3>
+    <p>
+      Etiam libero neque, luctus a, eleifend nec, semper at, lorem. Sed pede. Nulla lorem metus, adipiscing ut, luctus sed, hendrerit vitae, mi.
+    </p>
+  </div>
+<!-- here it ends -->
+
             <!--HKA 11.10.2013 Edit Contact -->
              <div id="EditContactModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 
@@ -904,4 +914,14 @@
           $('#assigeeList').slimScroll({
               height: '200px'
           });
+</script>
+
+
+<script type="text/javascript">
+$(function() {
+   // run the currently selected effect
+   
+
+   $( "#effect" ).hide();
+   });
 </script>
